# text-edit-ai

./: .gitignore  README.md  api_manager.py  config_manager.py  file_processor.py  langchain_manager.py  main.py  prompt_manager.py  pyproject.toml
text_edit_ai/cli/: __main__.py  colors.py  config_manager.py  file_processor.py  langchain_manager.py  markup_manager.py  prompt_manager.py  session_manager.py  ui_manager.py
text_edit_ai/tests/cli/: test_colors.py  test_config_manager.py  test_file_processor.py  test_langchain_manager.py  test_main.py  test_markup_manager.py  test_session_manager.py  test_ui_manager.py
