[project]
name = "text-edit-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.4.6",
    "aiohttp==3.11.12",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "attrs==25.1.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "docstring-parser==0.16",
    "filetype==1.2.0",
    "frozenlist==1.5.0",
    "google-ai-generativelanguage==0.6.15",
    "google-api-core==2.24.1",
    "google-api-python-client==2.161.0",
    "google-auth==2.38.0",
    "google-auth-httplib2==0.2.0",
    "google-cloud-aiplatform==1.81.0",
    "google-cloud-bigquery==3.29.0",
    "google-cloud-core==2.4.2",
    "google-cloud-resource-manager==1.14.1",
    "google-cloud-storage==2.19.0",
    "google-crc32c==1.6.0",
    "google-generativeai==0.8.4",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.68.0",
    "grpc-google-iam-v1==0.14.0",
    "grpcio==1.70.0",
    "grpcio-status==1.70.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "iniconfig==2.0.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.1.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "keyring==25.6.0",
    "langchain==0.3.19",
    "langchain-core==0.3.37",
    "langchain-google-genai==2.0.10",
    "langchain-google-vertexai==2.0.13",
    "langchain-text-splitters==0.3.6",
    "langsmith==0.3.10",
    "more-itertools==10.6.0",
    "multidict==6.1.0",
    "numpy==2.2.3",
    "orjson==3.10.15",
    "packaging==24.2",
    "pluggy==1.5.0",
    "propcache==0.3.0",
    "proto-plus==1.26.0",
    "protobuf==5.29.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pyparsing==3.2.1",
    "pytest==8.3.5",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rsa==4.9",
    "ruff==0.9.9",
    "shapely==2.0.7",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.38",
    "tenacity==9.0.0",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "uritemplate==4.1.1",
    "urllib3==2.3.0",
    "yarl==1.18.3",
    "zstandard==0.23.0",
]
